--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h1>White Water Rafting Site Plan</h1>
+    <h1>VR Rafting Site Plan</h1>
     <h2>Hans Capener</h2>
     <h2>WDD 130-02</h2>
     
@@ -19,11 +19,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>Entice/advertise a multi-location VR Rafting experience. Showcase the location/features, and sell tickets for the in person experience.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>Gamers, People who enjoy White water Rafting, and </p>
     <!-- change this -->
 
     <hr />
@@ -53,10 +53,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">#52EBEA</td>
+        <td class="secondary">#2B9E9D</td>
+        <td class="accent1">#EBAF8D</td>
+        <td class="accent2">#C78965</td>
       </tr>
     </table>
 
