--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,9 +16,9 @@
       
       <nav>
         <a href="index.html">Home</a>
+        <a href="#">Page 2</a>
         <a href="site-plan-rafting.html">Site Plan</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="faq.html">FAQ</a>
+        <a href="contactus.html">Contact Us</a>
       </nav>
     </header>
 
@@ -37,23 +37,25 @@
 
     <main class="home-grid">
 
-      <div class="gallery">
-        <div class="machine-card">
-          <img class="card-image" src="images/the_machine.jpg" alt="The Machine">
-          <img class="icon" src="images/vricon.png" alt="VR Icon">
-          <h2>The Machine</h2>
-        </div>
-        <div class="game-card">
-          <img class="card-image" src="images/the_game.jpg" alt="The Game">
-          <img class="icon" src="images/oaricon.png" alt="Oars">
-          <h2>The Game</h2>
-        </div>
-        <div class="locations-card">
-          <img class="card-image" src="images/locations.jpg" alt="Map of Locations">
-          <img class="icon" src="images/mapicon.png" alt="Map Icon">
-          <h2>Local Locations</h2>
-        </div>
-      </div>
+      <section class="machine-card">
+        <img class="card-image" src="images/the_machine.jpg" alt="The Machine">
+        <img class="icon" src="images/vricon.png" alt="VR Icon">
+        <h2>The Machine</h2>
+      </section>
+      <section class="game-card">
+        <img class="card-image" src="images/the_game.jpg" alt="The Game">
+        <img class="icon" src="images/oaricon.png" alt="Oars">
+        <h2>The Game</h2>
+      </section>
+      <section class="locations-card">
+        <img class="card-image" src="images/locations.jpg" alt="Map of Locations">
+        <img class="icon" src="images/mapicon.png" alt="Map Icon">
+        <h2>Local Locations</h2>
+      </section>
+      <section class="msg">
+        <h2>More Than Just The Thrill</h2>
+        <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+      </section>
 
     </main>
 
@@ -62,14 +64,14 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="index.html">
-              <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="Facebook Logo">
+            <a href="https://facebook.com">
+              <img src="images/facebook.png" alt="Facebook Logo">
             </a>
-            <a href="index.html">
-              <img src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png" alt="Twitter Logo">
+            <a href="https://twitter.com">
+              <img src="images/twitter.png" alt="Twitter Logo">
             </a>
-            <a href="index.html">
-              <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="Instagram Logo">
+            <a href="https://instagram.com">
+              <img src="images/instagram.png" alt="Instagram Logo">
             </a>
         </div>
     </footer>
