--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,75 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VR Rafting</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
+    <div id="content">
+      <header>
+        <a id="logo_link" href="index.html">
+          <img class="logo" src="images/vrwwrlogo.png" alt="VR Rafting Logo">
+        </a>
+        
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="#">Page 2</a>
+          <a href="site-plan-rafting.html">Site Plan</a>
+          <a href="contactus.html">Contact Us</a>
+        </nav>
+      </header>
 
-    <header>
-      <a id="logo_link" href="index.html">
-        <img class="logo" src="images/vrwwrlogo.png" alt="VR Rafting Logo">
-      </a>
-      
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="#">Page 2</a>
-        <a href="site-plan-rafting.html">Site Plan</a>
-        <a href="contactus.html">Contact Us</a>
-      </nav>
-    </header>
-
-    <div id="hero">
-      <div class="hero-box">
-        <img id="hero-img" src="images/hero.jpg" alt="Man playing with VR Headset">
+      <div id="hero">
+        <div class="hero-box">
+          <img id="hero-img" src="images/hero.jpg" alt="Man playing with VR Headset">
+        </div> 
+        <section id="hero-msg">
+          <h1 class="home-title">VR RAFTING</h1>
+          <h4>Experience a Thrilling Immersive VR Experience</h4>
+          <div class="button-box">
+            <a class='book' href="contactus.html">Buy Tickets Now!</a>
+          </div>
+        </section>
       </div>
-      <section id="hero-msg">
-        <h1 class="home_title">VR RAFTING</h1>
-        <h4>Experience a Thrilling Immersive VR Experience</h4>
-        <div class="button-box">
-          <a class='book' href="contactus.html">Buy Tickets Now!</a>
-        </div>
-      </section>
+
+      <main class="home-grid">
+        <section class="machine-card">
+          <img class="card-image" src="images/the_machine.jpg" alt="The Machine">
+          <img class="icon" src="images/vricon.png" alt="VR Icon">
+          <h2>The Machine</h2>
+        </section>
+        <section class="game-card">
+          <img class="card-image" src="images/the_game.jpg" alt="The Game">
+          <img class="icon" src="images/oaricon.png" alt="Oars">
+          <h2>The Game</h2>
+        </section>
+        <section class="locations-card">
+          <img class="card-image" src="images/locations.jpg" alt="Map of Locations">
+          <img class="icon" src="images/mapicon.png" alt="Map Icon">
+          <h2>Local Locations</h2>
+        </section>
+        <div id="background"></div>
+        <section class="msg">
+          <h2>More Than Just The Thrill</h2>
+          <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+        </section>
+      </main>
+
+      <footer>
+          <p>VR Rafting &copy; 2023 Hans Capener</p>
+          <p><a href="site-plan-rafting.html">Site Plan</a></p>
+          <p><a href="contactus.html">Contact Us</a></p>
+          <div class="social">
+              <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="Facebook Logo">
+              </a>
+              <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="Twitter Logo">
+              </a>
+              <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="Instagram Logo">
+              </a>
+          </div>
+      </footer>
     </div>
-
-    <main class="home-grid">
-
-      <section class="machine-card">
-        <img class="card-image" src="images/the_machine.jpg" alt="The Machine">
-        <img class="icon" src="images/vricon.png" alt="VR Icon">
-        <h2>The Machine</h2>
-      </section>
-      <section class="game-card">
-        <img class="card-image" src="images/the_game.jpg" alt="The Game">
-        <img class="icon" src="images/oaricon.png" alt="Oars">
-        <h2>The Game</h2>
-      </section>
-      <section class="locations-card">
-        <img class="card-image" src="images/locations.jpg" alt="Map of Locations">
-        <img class="icon" src="images/mapicon.png" alt="Map Icon">
-        <h2>Local Locations</h2>
-      </section>
-      <section class="msg">
-        <h2>More Than Just The Thrill</h2>
-        <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-      </section>
-
-    </main>
-
-    <footer>
-        <p>VR Rafting &copy; 2023 Hans Capener</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
-        <div class="social">
-            <a href="https://facebook.com">
-              <img src="images/facebook.png" alt="Facebook Logo">
-            </a>
-            <a href="https://twitter.com">
-              <img src="images/twitter.png" alt="Twitter Logo">
-            </a>
-            <a href="https://instagram.com">
-              <img src="images/instagram.png" alt="Instagram Logo">
-            </a>
-        </div>
-    </footer>
   </body>
 </html>
