--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,10 +11,9 @@
   <body>
     <div id="content">
       <header>
-        <a id="logo_link" href="index.html">
+        <a id="logo-link" href="index.html">
           <img class="logo" src="images/vrwwrlogo.png" alt="VR Rafting Logo">
         </a>
-        
         <nav>
           <a href="index.html">Home</a>
           <a href="#">Page 2</a>
@@ -53,12 +52,14 @@
           <h2>Local Locations</h2>
         </section>
         <div id="background"></div>
+        <img class="grass" src="images/vrgrass.jpg" alt="VR Goggles resting on grass">
         <section class="msg">
           <h2>More Than Just The Thrill</h2>
           <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+          <a class='join' href="rivers.html">Join Us</a>
         </section>
       </main>
-
+      
       <footer>
           <p>VR Rafting &copy; 2023 Hans Capener</p>
           <p><a href="site-plan-rafting.html">Site Plan</a></p>
