--- a/wwr/index.html
+++ b/wwr/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VR Rafting</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="images/vrwwricon2.png">
   </head>
 
   <body>
