--- a/wwr/index.html
+++ b/wwr/index.html
@@ -24,7 +24,7 @@
       </header>
 
       <div id="hero">
-        <div class="hero-box">
+        <div id="hero-box">
           <img id="hero-img" src="images/hero.jpg" alt="Man playing with VR Headset">
         </div> 
         <section id="hero-msg">
