--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -102,15 +102,15 @@
     </div>
     <hr />
     <h2>Wireframes</h2>
-    <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
+    <!-- https://wireframe.cc/4KByz1-->
 
     <h3>Home</h3>
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Book Now!</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/wireframe-book.png" alt="Wireframe for Book website">
   </main>
 </body>
 
