--- a/wwr/index.html
+++ b/wwr/index.html
@@ -17,7 +17,7 @@
         </a>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#">Page 2</a>
+          <a href="booknow.html">Book Now!</a>
           <a href="site-plan-rafting.html">Site Plan</a>
           <a href="contactus.html">Contact Us</a>
         </nav>
@@ -28,7 +28,7 @@
           <img id="hero-img" src="images/hero.jpg" alt="Man playing with VR Headset">
         </div> 
         <section id="hero-msg">
-          <h1 class="home-title">VR RAFTING</h1>
+          <h1 class="home-title header-on-color">VR RAFTING</h1>
           <h4>Experience a Thrilling Immersive VR Experience</h4>
           <div class="button-box">
             <a class='book' href="contactus.html">Buy Tickets Now!</a>
